unpackaged/main/default/objects/Account/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>Street Address</description>
    <label>Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>