unpackaged/main/default/objects/Account/fields/Alert_Required__c.field-meta.xml
<CustomField>
    <fullName>Alert_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Required?</label>
    <type>Checkbox</type>
</CustomField>