unpackaged/main/default/objects/Account/fields/APIStemName__c.field-meta.xml
<CustomField>
    <fullName>APIStemName__c</fullName>
    <label>APIStemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>