unpackaged/main/default/objects/Account/fields/BIRDispatchAgent__c.field-meta.xml
<CustomField>
    <fullName>BIRDispatchAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIRDispatchAgent</label>
    <type>Checkbox</type>
</CustomField>