unpackaged/main/default/objects/Account/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>What property to use</description>
    <label>BU</label>
    <length>64</length>
    <type>Text</type>
</CustomField>