unpackaged/main/default/objects/Account/fields/CsiteNum__c.field-meta.xml
<CustomField>
    <fullName>CsiteNum__c</fullName>
    <label>CsiteNum</label>
    <length>64</length>
    <type>Text</type>
</CustomField>