unpackaged/main/default/objects/Account/fields/Customer_Pin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pin__c</fullName>
    <label>Customer Pin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>