unpackaged/main/default/objects/Account/fields/Email_CC_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_CC_Address__c</fullName>
    <label>Email CC Address</label>
    <type>TextArea</type>
</CustomField>