unpackaged/main/default/objects/Account/fields/Email_List__c.field-meta.xml
<CustomField>
    <fullName>Email_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email List</label>
    <referenceTo>Email_Contacts__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>