unpackaged/main/default/objects/Account/fields/Email_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Address__c</fullName>
    <label>Email To Address</label>
    <type>TextArea</type>
</CustomField>