unpackaged/main/default/objects/Account/fields/Falcon__c.field-meta.xml
<CustomField>
    <fullName>Falcon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Falcon</label>
    <type>Checkbox</type>
</CustomField>