unpackaged/main/default/objects/Account/fields/FLMDispatchAgent__c.field-meta.xml
<CustomField>
    <fullName>FLMDispatchAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLMDispatchAgent</label>
    <type>Checkbox</type>
</CustomField>