unpackaged/main/default/objects/Account/fields/Is_API__c.field-meta.xml
<CustomField>
    <fullName>Is_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is API</label>
    <type>Checkbox</type>
</CustomField>