unpackaged/main/default/objects/Account/fields/Is_Optimizable__c.field-meta.xml
<CustomField>
    <fullName>Is_Optimizable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Optimizable</label>
    <type>Checkbox</type>
</CustomField>