unpackaged/main/default/objects/Account/fields/Is_Turf__c.field-meta.xml
<CustomField>
    <fullName>Is_Turf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Turf</label>
    <type>Checkbox</type>
</CustomField>