unpackaged/main/default/objects/Account/fields/IsSubledger__c.field-meta.xml
<CustomField>
    <fullName>IsSubledger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSubledger</label>
    <type>Checkbox</type>
</CustomField>