unpackaged/main/default/objects/Account/fields/Outage_Type__c.field-meta.xml
<CustomField>
    <fullName>Outage_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outage Type</label>
    <type>Checkbox</type>
</CustomField>