unpackaged/main/default/objects/Account/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts</label>
    <type>Checkbox</type>
</CustomField>