unpackaged/main/default/objects/Account/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <label>Project Manager</label>
    <length>64</length>
    <type>Text</type>
</CustomField>