unpackaged/main/default/objects/Account/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <description>Project Scope of work</description>
    <label>Project Scope</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>