unpackaged/main/default/objects/Account/fields/Request_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Request_Time_Zone__c</fullName>
    <label>Request Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Request_Time_Zone</valueSetName>
    </valueSet>
</CustomField>