unpackaged/main/default/objects/Account/fields/Requestor_Email_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email_Statuses__c</fullName>
    <label>Requestor Email Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Enroute</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Off-Site</fullName>
            </value>
            <value>
                <fullName>Field Complete</fullName>
            </value>
            <value>
                <fullName>Field Incompleted</fullName>
            </value>
            <value>
                <fullName>Incompleted</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>