unpackaged/main/default/objects/Account/fields/Send_Email_to_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_to_Requestor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email to Requestor</label>
    <type>Checkbox</type>
</CustomField>