unpackaged/main/default/objects/Account/fields/Send_Potential_Tech__c.field-meta.xml
<CustomField>
    <fullName>Send_Potential_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field will be used to Trigger the CandidateFetcherQueueable class. If the Checkbox is true, the trigger will run and get the Activate candidate on SA</description>
    <label>Send Potential Tech</label>
    <type>Checkbox</type>
</CustomField>