unpackaged/main/default/objects/Account/fields/Site_Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Access Required</label>
    <type>Checkbox</type>
</CustomField>