unpackaged/main/default/objects/Account/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <label>Site Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>