unpackaged/main/default/objects/Account/fields/Site_ID_number__c.field-meta.xml
<CustomField>
    <fullName>Site_ID_number__c</fullName>
    <label>Site ID number</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>