unpackaged/main/default/objects/Account/fields/Site_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Site_Name_Formula__c</fullName>
    <formula>IF (ISBLANK(BillingState), 
Name + &#39; (&#39;  + Site_ID_number__c + &#39;)&#39;,
BillingCity  + &#39; - &#39; + BillingStreet + &#39; (&#39;  + Site_ID_number__c + &#39;)&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name Formula</label>
    <type>Text</type>
</CustomField>