unpackaged/main/default/objects/Account/fields/SiteName__c.field-meta.xml
<CustomField>
    <fullName>SiteName__c</fullName>
    <description>Site ID Description</description>
    <label>SiteName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>