unpackaged/main/default/objects/Account/fields/SitePostal__c.field-meta.xml
<CustomField>
    <fullName>SitePostal__c</fullName>
    <description>Property Other State/Province</description>
    <label>SitePostal</label>
    <length>64</length>
    <type>Text</type>
</CustomField>