unpackaged/main/default/objects/Account/fields/SiteProv__c.field-meta.xml
<CustomField>
    <fullName>SiteProv__c</fullName>
    <label>SiteProv</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Site_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Territory</valueSetName>
    </valueSet>
</CustomField>