unpackaged/main/default/objects/Account/fields/Skill_Value__c.field-meta.xml
<CustomField>
    <fullName>Skill_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Value</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>