unpackaged/main/default/objects/Account/fields/SparesDepotLocation__c.field-meta.xml
<CustomField>
    <fullName>SparesDepotLocation__c</fullName>
    <description>what property to use</description>
    <label>SparesDepotLocation</label>
    <length>64</length>
    <type>Text</type>
</CustomField>