unpackaged/main/default/objects/Account/fields/Sub_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer_Type__c</fullName>
    <label>Sub Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falcon</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>Drops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>