unpackaged/main/default/objects/Account/fields/Sub_Customer_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer_Type_Name__c</fullName>
    <formula>TEXT (Sub_Customer_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Customer Type Name</label>
    <type>Text</type>
</CustomField>