unpackaged/main/default/objects/Account/fields/SubSubCustomer__c.field-meta.xml
<CustomField>
    <fullName>SubSubCustomer__c</fullName>
    <description>what property to use (Customers Customer)</description>
    <label>SubSubCustomer</label>
    <length>64</length>
    <type>Text</type>
</CustomField>