unpackaged/main/default/objects/Account/recordTypes/Archive.recordType-meta.xml
<RecordType>
    <fullName>Archive</fullName>
    <active>true</active>
    <description>A type of Account that was Archive and decommissioned</description>
    <label>Archive</label>
</RecordType>