unpackaged/main/default/objects/Account/recordTypes/Bill_to_Customer.recordType-meta.xml
<RecordType>
    <fullName>Bill_to_Customer</fullName>
    <active>true</active>
    <description>A parent Account of all Sub Customers that belong to the same Customer</description>
    <label>Bill to Customer</label>
</RecordType>