unpackaged/main/default/objects/Account/recordTypes/Site.recordType-meta.xml
<RecordType>
    <fullName>Site</fullName>
    <active>true</active>
    <description>A place where actual work is performed</description>
    <label>Site</label>
</RecordType>