unpackaged/main/default/objects/Account/recordTypes/Sub_Customer.recordType-meta.xml
<RecordType>
    <fullName>Sub_Customer</fullName>
    <active>true</active>
    <description>A type of Account that stores SLAs, Skills and other information applicable to all Sites that belong to a Sub Customer</description>
    <label>Sub Customer</label>
</RecordType>