unpackaged/main/default/objects/Account/validationRules/State_Code_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Code_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
ISBLANK(BillingState)  
),
AND(
REGEX(BillingState,&quot;[A-Z]&quot;),
LEN(BillingState) = 2
)
)</errorConditionFormula>
    <errorMessage>State/Province must be in a code format.</errorMessage>
</ValidationRule>