unpackaged/main/default/objects/Account/validationRules/SubCustomer_must_be_parent_of_site.validationRule-meta.xml
<ValidationRule>
    <fullName>SubCustomer_must_be_parent_of_site</fullName>
    <active>true</active>
    <description>Site Account cannot be created if it&#39;s parent Account is not &#39;Sub Customer&#39;</description>
    <errorConditionFormula>AND(RecordType.Name =&quot;Site&quot;,Parent.RecordType.Name &lt;&gt; &quot;Sub Customer&quot;)</errorConditionFormula>
    <errorMessage>Site Account cannot be created if it&#39;s parent Account is not &#39;Sub Customer&#39;</errorMessage>
</ValidationRule>