unpackaged/main/default/objects/Account/listViews/BillToCustomers.listView-meta.xml
<ListView>
    <fullName>BillToCustomers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Bill_to_Customer</value>
    </filters>
    <label>01 BillToCustomers</label>
    <sharedTo>
        <group>Dispatcher_Group</group>
    </sharedTo>
</ListView>