unpackaged/main/default/objects/Account/listViews/Copy_of_Account_Detail.listView-meta.xml
<ListView>
    <fullName>Copy_of_Account_Detail</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Site_ID_number__c</columns>
    <columns>CsiteNum__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Bill_to_customer__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>Work_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Archive</value>
    </filters>
    <label>04 Archive</label>
    <sharedTo>
        <role>Area_Manager_Read_Only</role>
        <role>Technicians_with_Dispatcher_Area_Manager_Read_Only</role>
        <roleAndSubordinatesInternal>Admin</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Dispatch_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>