unpackaged/main/default/objects/Account/listViews/SiteID.listView-meta.xml
<ListView>
    <fullName>SiteID</fullName>
    <columns>Site_ID_number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>IsSubledger__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Bill_to_customer__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CsiteNum__c</columns>
    <columns>SubSubCustomer__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Site</value>
    </filters>
    <label>03 SiteID</label>
    <sharedTo>
        <group>Dispatcher_Group</group>
    </sharedTo>
</ListView>