unpackaged/main/default/objects/Account/listViews/SubCustomers.listView-meta.xml
<ListView>
    <fullName>SubCustomers</fullName>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Work_Type__c</columns>
    <columns>Drops__c</columns>
    <columns>Falcon__c</columns>
    <columns>OBS__c</columns>
    <columns>Outage_Type__c</columns>
    <columns>Parts__c</columns>
    <columns>Is_Turf__c</columns>
    <columns>BIRDispatchAgent__c</columns>
    <columns>FLMDispatchAgent__c</columns>
    <columns>Is_Optimizable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Sub_Customer</value>
    </filters>
    <label>02 SubCustomers</label>
    <sharedTo>
        <group>Dispatcher_Group</group>
    </sharedTo>
</ListView>